--- a/code academy/wiki.html
+++ b/code academy/wiki.html
@@ -9,10 +9,26 @@
 			background:#FFFAF0;
 		}
 		h1{
-			text-align: center;}
+			text-align: center;
+		}
+		
+		p{
+			margin: 50px;
+		}
+		img{
+			border: 2px solid black;
+			width: 150px;
+			height: 150px;
+			float: right;
+			margin: 10px;
+		}
 		h2{
 			text-align: center;
-			font-family:"Times New Roman", Times, serif ;}
+			font-family:"Times New Roman", Times, serif ;
+		}
+			a{
+			text-decoration: none;
+		}
 
 		.fundo{
 			background: #FFDAB9;
@@ -31,17 +47,6 @@
 			text-decoration: none;
 		}
 
-		p{
-			margin: 50px;
-		}
-		img{
-			border: 2px solid black;
-			width: 150px;
-			height: 150px;
-			float: right;
-			margin: 10px;
-
-		}
 	</style>
 </head>
 <body>
